--- a/web-angular/pubspec.yaml
+++ b/web-angular/pubspec.yaml
@@ -10,8 +10,8 @@ environment:
 dependencies:
   angular: ^5.3.0
   angular_components: ^0.13.0
-  angular_router: ^2.0.0-alpha+19
-  angular_forms: ^2.0.0
+  angular_router: ^2.0.0-alpha
+  angular_forms: ^2.1.0
   http: ^0.11.0
   stream_transform: ^0.0.6
 
